version/0.15/_sources/api/ansys/dpf/core/operators/mapping/prepare_mapping_workflow/InputsPrepareMappingWorkflow.rst.txt






:class:`InputsPrepareMappingWorkflow`
=====================================


.. py:class:: ansys.dpf.core.operators.mapping.prepare_mapping_workflow.InputsPrepareMappingWorkflow(op: ansys.dpf.core.dpf_operator.Operator)

   Bases: :py:obj:`ansys.dpf.core.inputs._Inputs`


   Intermediate class used to connect user inputs to
   prepare_mapping_workflow operator.

   .. rubric:: Examples

   >>> from ansys.dpf import core as dpf
   >>> op = dpf.operators.mapping.prepare_mapping_workflow()
   >>> my_input_support = dpf.Field()
   >>> op.inputs.input_support.connect(my_input_support)
   >>> my_output_support = dpf.Field()
   >>> op.inputs.output_support.connect(my_output_support)
   >>> my_filter_radius = float()
   >>> op.inputs.filter_radius.connect(my_filter_radius)
   >>> my_influence_box = float()
   >>> op.inputs.influence_box.connect(my_influence_box)






.. py:currentmodule:: InputsPrepareMappingWorkflow

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~connect`
            - Connect any input (an entity or an operator output) to any input pin of this operator.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~input_support`
            - Allows to connect input_support input to the operator.
          * - :py:attr:`~output_support`
            - Allows to connect output_support input to the operator.
          * - :py:attr:`~filter_radius`
            - Allows to connect filter_radius input to the operator.
          * - :py:attr:`~influence_box`
            - Allows to connect influence_box input to the operator.




   .. tab-item:: Special methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~__str__`
            - 
          * - :py:attr:`~__call__`
            - 
          * - :py:attr:`~__getitem__`
            - 




Import detail
-------------

.. code-block:: python

    from ansys.dpf.core.operators.mapping.prepare_mapping_workflow import InputsPrepareMappingWorkflow

Property detail
---------------

.. py:property:: input_support
   :type: ansys.dpf.core.inputs.Input[ansys.dpf.core.field.Field | ansys.dpf.core.meshed_region.MeshedRegion]


   Allows to connect input_support input to the operator.

   :returns: An Input instance for this pin.
   :rtype: input

   .. rubric:: Examples

   >>> from ansys.dpf import core as dpf
   >>> op = dpf.operators.mapping.prepare_mapping_workflow()
   >>> op.inputs.input_support.connect(my_input_support)
   >>> # or
   >>> op.inputs.input_support(my_input_support)

.. py:property:: output_support
   :type: ansys.dpf.core.inputs.Input[ansys.dpf.core.field.Field | ansys.dpf.core.meshed_region.MeshedRegion]


   Allows to connect output_support input to the operator.

   :returns: An Input instance for this pin.
   :rtype: input

   .. rubric:: Examples

   >>> from ansys.dpf import core as dpf
   >>> op = dpf.operators.mapping.prepare_mapping_workflow()
   >>> op.inputs.output_support.connect(my_output_support)
   >>> # or
   >>> op.inputs.output_support(my_output_support)

.. py:property:: filter_radius
   :type: ansys.dpf.core.inputs.Input[float]


   Allows to connect filter_radius input to the operator.

   Radius size for the RBF filter

   :returns: An Input instance for this pin.
   :rtype: input

   .. rubric:: Examples

   >>> from ansys.dpf import core as dpf
   >>> op = dpf.operators.mapping.prepare_mapping_workflow()
   >>> op.inputs.filter_radius.connect(my_filter_radius)
   >>> # or
   >>> op.inputs.filter_radius(my_filter_radius)

.. py:property:: influence_box
   :type: ansys.dpf.core.inputs.Input[float]


   Allows to connect influence_box input to the operator.

   :returns: An Input instance for this pin.
   :rtype: input

   .. rubric:: Examples

   >>> from ansys.dpf import core as dpf
   >>> op = dpf.operators.mapping.prepare_mapping_workflow()
   >>> op.inputs.influence_box.connect(my_influence_box)
   >>> # or
   >>> op.inputs.influence_box(my_influence_box)




Method detail
-------------

.. py:method:: __str__()

.. py:method:: connect(inpt)

   Connect any input (an entity or an operator output) to any input pin of this operator.

   Searches for the input type corresponding to the output.

   .. deprecated::
       Deprecated in favor of explicit output-to-input connections.


.. py:method:: __call__(inpt)

.. py:method:: __getitem__(item) -> Input




